<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/margin_basic_0dp"
        android:layout_height="@dimen/margin_basic_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_basic_16dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topLayout"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="300dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="@dimen/margin_basic_0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/test_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleTV"
                    android:layout_width="@dimen/margin_basic_0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:fontFamily="@font/sf_pro_bold"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginRight="35dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <LinearLayout
                    android:id="@+id/backLayout"
                    android:layout_width="@dimen/margin_basic_0dp"
                    android:layout_height="45dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/margin_basic_24dp"
                    android:layout_marginLeft="@dimen/margin_basic_16dp"
                    android:layout_marginRight="@dimen/margin_basic_16dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/back_white"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/back"
                        android:textSize="@dimen/font_size_16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/sf_pro_regular"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/sf_pro_regular"
                    android:layout_marginTop="@dimen/margin_basic_24dp"
                    android:textSize="@dimen/font_size_16sp"
                    android:paddingRight="@dimen/margin_basic_16dp"
                    android:paddingLeft="@dimen/margin_basic_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tabView"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="50dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topLayout">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/customerTabTV"
                    android:layout_width="@dimen/margin_basic_0dp"
                    android:layout_height="0dp"
                    android:textColor="@color/grey"
                    android:text="@string/customer"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_16sp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:background="@drawable/tab_un_selected_bg"
                    app:layout_constraintEnd_toStartOf="@+id/trainerTabTV"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/trainerTabTV"
                    android:layout_width="@dimen/margin_basic_0dp"
                    android:layout_height="0dp"
                    android:textColor="@color/black"
                    android:text="@string/trainer"
                    android:gravity="center"
                    android:textSize="@dimen/font_size_16sp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:background="@drawable/tab_selected_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/customerTabTV" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneTxt"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:textSize="@dimen/font_size_16sp"
                android:textColor="@color/black"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:fontFamily="@font/sf_pro_regular"
                android:textColorHint="@color/black"
                android:background="@drawable/edittext_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabView"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/phoneNumberError"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:text="@string/error_phone"
                android:visibility="gone"
                android:textSize="@dimen/font_size_12sp"
                android:textColor="@color/red1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneTxt"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordTxt"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:textSize="@dimen/font_size_16sp"
                android:textColor="@color/black"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:fontFamily="@font/sf_pro_regular"
                android:textColorHint="@color/black"
                android:background="@drawable/edittext_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberError"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pwdError"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:text="@string/error_password"
                android:visibility="gone"
                android:textSize="@dimen/font_size_12sp"
                android:textColor="@color/red1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTxt"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPwdTV"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/margin_basic_10dp"
                android:paddingRight="@dimen/margin_basic_10dp"
                android:paddingTop="@dimen/margin_basic_10dp"
                android:paddingBottom="@dimen/margin_basic_10dp"
                android:text="@string/forgot"
                android:textSize="@dimen/font_size_16sp"
                android:fontFamily="@font/sf_pro_regular"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/pwdError"
                app:layout_constraintEnd_toEndOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="35dp"
                android:layout_marginLeft="35dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:gravity="center"
                android:fontFamily="@font/sf_pro_medium"
                android:textSize="18sp"
                android:background="@drawable/red_curved_solid_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPwdTV"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>