<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/margin_basic_0dp"
        android:layout_height="@dimen/margin_basic_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_basic_16dp">
            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="375dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/test_image"
                android:scaleType="centerCrop"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTV"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="28sp"
                android:fontFamily="@font/sf_pro_bold"
                android:layout_marginTop="@dimen/margin_basic_24dp"
                android:textColor="@color/white"
                android:text="@string/start_up_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title1TV"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="13sp"
                android:fontFamily="@font/sf_pro_regular"
                android:layout_marginTop="@dimen/margin_basic_10dp"
                android:textColor="@color/white"
                android:text="@string/start_up_title_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTV"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createAccountBtn"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/margin_basic_24dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"
                android:fontFamily="@font/sf_pro_medium"
                android:background="@drawable/white_corner_curved_bg_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title1TV"/>
            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_basic_10dp"
                android:paddingTop="@dimen/margin_basic_10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccountBtn">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_13sp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:text="@string/already_have_account"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/margin_basic_5dp"
                    android:layout_marginRight="@dimen/margin_basic_5dp"
                    android:textSize="@dimen/font_size_14sp"
                    android:fontFamily="@font/sf_pro_medium"
                    android:text="@string/log_in"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>