<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_image">
    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/margin_basic_0dp"
        android:layout_height="@dimen/margin_basic_0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_basic_16dp">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
           <androidx.appcompat.widget.AppCompatTextView
               android:id="@+id/title1TV"
               android:layout_width="@dimen/margin_basic_0dp"
               android:layout_height="wrap_content"
               android:text="@string/select_country"
               android:textSize="@dimen/font_size_20sp"
               android:gravity="center"
               android:fontFamily="@font/sf_pro_bold"
               android:textColor="@color/white"
               android:layout_marginTop="80dp"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/logo"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/countryList"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_corner_curved_bg_10"
                android:layout_marginRight="@dimen/margin_basic_20dp"
                android:layout_marginLeft="@dimen/margin_basic_20dp"
                android:layout_marginTop="@dimen/margin_basic_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title1TV"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title2TV"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:textSize="@dimen/font_size_20sp"
                android:gravity="center"
                android:fontFamily="@font/sf_pro_bold"
                android:textColor="@color/white"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countryList"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/languageList"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_corner_curved_bg_10"
                android:layout_marginRight="@dimen/margin_basic_20dp"
                android:layout_marginLeft="@dimen/margin_basic_20dp"
                android:layout_marginTop="@dimen/margin_basic_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title2TV"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/continueBtn"
                android:layout_width="@dimen/margin_basic_0dp"
                android:layout_height="50dp"
                android:text="@string/continue_"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:fontFamily="@font/sf_pro_bold"
                android:background="@drawable/white_corner_curved_bg_10"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languageList"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>